2016-03-22  Karl Berry  <karl@freefriends.org>

	* texmfmp.c: no uexit after FATAL.

2016-03-21  Karl Berry  <karl@freefriends.org>

	* texmfmp.c (initstarttime): wording of invalid SOURCE_DATE_EPOCH.

2016-01-26  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Improve to skip BOM (win32 only).

2016-01-02  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* printversion.c: 2015 ---> 2016.

2015-11-15  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Show return code of system() if it is not zero.

2015-11-01  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Improve restricted shell escape for w32 a little.

2015-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Another minor modification (unused static).

2015-08-18  The Thanh Han  <hanthethanh@gmail.com>

	* texmfmp.c: Patch from Maria with some minor modification.

2015-07-09  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Add \pdfmdfivesum to XeTeX.

2015-07-02  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.c: Moved convertStringToHexString() and getmd5sum()
	from ../pdftexdir/utils.c to here.

2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Integrate MFLua and MFLuaJIT.
	* texmfmp.c: Adapted.

2015-03-16  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* printversion.c: 2014 ---> 2015.

2014-11-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Avoid MinGW64 warnings (INVALID_SOCKET => -1).

2014-11-03  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Indentation.

2014-10-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Use the decision about tex*.dll from ../texmfmp.h.

2014-10-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Apply some code from W32TeX.

2014-08-22  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* texmfmp.c: Symplify support of multibyte characters, by
	updating fsyscp_popen in kpathsea (Windows only).

2014-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>
